Fix pricing hero overflow

--- a/src/angular/planit/src/assets/sass/components/marketing/_pricing-hero.scss
+++ b/src/angular/planit/src/assets/sass/components/marketing/_pricing-hero.scss
@@ -1,6 +1,7 @@
 .pricing-section.pricing-hero {
   min-height: 42rem;
   background-color: $neutral-1;
+  overflow-x: hidden;
 }
 
 .pricing-hero > .section-content {
